fix(cxl-ui): close dashboard container gap to footer

--- a/packages/cxl-ui/scss/cxl-app-layout/_layout.scss
+++ b/packages/cxl-ui/scss/cxl-app-layout/_layout.scss
@@ -93,7 +93,8 @@ slot[name="action-bar"]::slotted(div) {
  */
 :host([layout^="1c"][theme~="cxl-dashboard"]:not([layout="1c"])) {
   main {
-    overflow: hidden;
+    min-height: calc(100vh - 200px);
+    overflow-x: hidden;
 
     > slot {
       padding-top: 0;
@@ -103,6 +104,11 @@ slot[name="action-bar"]::slotted(div) {
       @media #{mq.$medium} {
         margin: 0 auto;
       }
+    }
+
+    // make article take full height of viewport even with little content
+    ::slotted(article:only-of-type) {
+      min-height: calc(100vh - 200px);
     }
   }
 }
